# color

./: .gitignore  Makefile  dune-project
.github/workflows/: ci.yml  deploy-pages.yml
coq/: dune
coq/Color/: Core.v
coq/Extract/: ExtractCore.v
docs/: BUILD.md  CGIR-GUI.md  CONTRIBUTING.md  GLOSSARY.md  NAVIGATION.md  README.md  REFERENCES.md  STYLE.md
docs/advanced/: axioms-and-neurosymbolics.md  causality-in-snn.md  oklab-geometric-semantics.md
docs/foundations/: color-spaces.md  overview.md  symbol-grounding-basics.md
docs/ir/: cgir-schema.json  ir-schema.json  oir-schema.json  tir-schema.json
docs/methods/: cgir-ir.md  oklab-methods.md  verification-and-validation.md
docs/reports/: Color-Geometry-and-CGIR-Toolkit-Project-Report.md  color-axioms-neurosymbolic-from-color-geometry.md  color-generalizing-conceptual-spaces-theory.md  color-geometry-for-snn-causality.md  color-geometry-for-symbol-grounding.md  color-oklab-web-app-geometric-semantics.md
docs/symbol-grounding/: d1-mapping-symbols-to-percepts.md  d2-color-geometry-as-grounding-space.md  (+4 more)
oklab_grounding/: MANIFEST.in  README.md  __init__.py  __main__.py  cgir.py  examples.py  oklab.py  pyproject.toml  requirements.txt  server.py  space.py  verification.py
tools/cgir/: __init__.py  cli_sim.py  cli_train.py  cli_validate.py  cli_verify.py  cli_viz.py  pyproject.toml  requirements.txt
tools/cgir/core/: __init__.py  droplet.py  mixing.py  numeric.py  oklab.py
webapp/: .eslintrc.cjs  netlify.toml  package-lock.json  package.json  playwright.config.ts  tsconfig.base.json  vitest.config.ts
(+70 files in other folders)
