[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cgir-tools"
version = "0.1.0"
description = "Color Geometry IR (CGIR) toolchain: schema validator and future sim/viz/train CLIs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Color Geometry", email = "dev@color-geometry.org" }
]
dependencies = [
  "jsonschema==4.23.0",
  "numpy==1.26.4",
  "scipy==1.13.1",
  "matplotlib==3.9.2",
  "plotly==5.24.1",
  "typer==0.12.5",
  "pydantic==2.8.2"
]

[project.urls]
Homepage = "https://color-geometry.org"
Repository = "https://example.org/repo"

[project.scripts]
cgir-validate = "cgir.cli_validate:main"

[tool.setuptools]
package-dir = { "" = "tools" }

[tool.setuptools.packages.find]
where = ["tools"]
include = ["cgir*"]